--- a/VoxPopuliClient/src/controls/URLBar.resx
+++ b/VoxPopuliClient/src/controls/URLBar.resx
@@ -120,24 +120,89 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="FavoriteButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAcCAYAAAAAwr0iAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADrwAAA68AZW8ckkAAAAYdEVYdFNvZnR3YXJlAHBhaW50Lm5ldCA0LjEuNWRHWFIA
-        AAJmSURBVEhLvVc7aBRBGF4LEZEY89iZDYgWprJJIQo+AgoWdlpoZaP2NhYiqPgotLCxsrWJ2lkEOwvF
-        183sXoKkEQQrQTAxXrjT3O5cMus3x5/kXCdxdzZ3H3wcO4/v+/f/5/6588ogrQ70198EPj32HrFkN5KQ
-        3afH3mLu3VBfItiPRPK6/rB7kIZ7BxXxq0ry1DAJ+V0a7g30R74jkez7agCS12qv+nfRdPeB2l9ZMV8j
-        u0nT3QXqvT0R/Fs2AGRkXn8a6qNl3UNT8stZ8w5eo2Xdgf48ug1v+tVi3Ca+FbPmfNDyckhTb0vjPWcq
-        8o/ikF2A8T18vrQZdxJBvG6hN6BMl5QYHtczjBstkl0fsWBnVMhuqZBPwCw0J9tm4MgFHNIqPp+2JL8T
-        R8FZsl1Ds8KPw7SR2bjpxMstNqV/imz/hqr4x5C6um3jZhDl+Y3ynCQ7O5CqwwgCKbOLlGCjKfgJstkY
-        KgwOIlU/LSJORGnr5kCSfD4oMXIAQczbBAtyQYX+EZIthmTaH0NJZi2iuYia13BpHSI5NyTCH0MKtc3g
-        v3R9807oKX/UKp6DGhkkGXe0InbaJp6HOEPnScYdOAPXbeJ52EL7Jhl3oEU/s4nnIQ7hJMm4A0IzWeEV
-        ml4BkznbHPELybghrXpbYZD8K8x+mV/D6ds9A1oM7jQXTLvZZNahoy6Xup5jEezPCCrwkY6GR2jJKszV
-        jSAeIuC4c4/pqrSkOJZkcI6Ml5XgT3Tk76OpdbE4FexVgj3GnqX23gq/SFPFgdTeRp1fmGZEQ7lhsocg
-        niMrD2ioOPR0+b9dG2t43h/5bwOuiLpKcQAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsAAAA7AAWrWiQkAAAAYdEVYdFNvZnR3YXJlAHBhaW50Lm5ldCA0LjEuNWRHWFIA
+        AAQXSURBVEhLrZVrTFxFGIbXPWfvsJRdkEp2PdxqBW0UfxRoG0kKYRuV9hf0V2tD0ihRTL2k0dCoUX/U
+        SlS0idGa1KRAo7XRxGI0/dFKy1qhCwuUGkqNFYq3GG1qgruz2Nf3252k9QI00i95cmbn+9535szMmbVd
+        bwQCAb9hGG8LwWAwW3ffuHA4HG9sX5cFQdq6+8ZEbW2t2+syLv3YUYIfXimB22n8WlZW5tLppYfT6dy0
+        6S4PVO/2NNKWPp1eepimeainJQ9zk71ppC19Or20sCxrWa7PTFzaW44rl2fIRfz25kos8xoJyemy/x8u
+        l2vbg9U+JI+04M+fx9Ike1sgfZLTZYuGWVFRsZzPIlLMI1nNZ7XP56vnsYx+uiMfqVgn5r47irkLR5Ea
+        6oT0SU5qpFZrRF+kvUxis3k8nkc9TmPWCpq4fbkDlWEn1pa5UFfhRmOlB1vW+jB74A7MTXSRbv08gNmu
+        inROaqRWNKIVDytgQjzp/YjNbrdPn3+hEH+8tRKJd+9B4r3VSHSvQfLQvUh+tB7JTyJQ/W1InXn9Gjqh
+        om1ctgiSH9elaxM9azJaeojXxPO3QLxtfM13ttX4cHnvbUh+/hDUyXaoU+1IDZDYLi4HibMdl+c/GCZS
+        M0ioUf3taQ/xkj0Sb1soFPLwyHWt4ytOvRrmrBqh+h7mDMlXrVCDJNbKgcgwiWeQPnWaDJAoOdHKzW/E
+        1GthiJd48pS50/vAuIkfzhPhoKGiLxZwWao4SDPUl5tpQGJkeDONr6KGyCA5RU40c2JViL5UAPEQL+37
+        9/D7/Q1el/2X/TuCSH5WjmR/PQfgHsQinP0GGl/D0AYOwD2I1nNZyrH/8SBE6/V6G7Tdf0dOTk4JNyf+
+        VLMf6osVXIYazr4GqVEypmFbxYnk+lbgSdaKRrTaZuHgLCKR1bx7+ks5+1VQo2T8TqS+XkX4PMvfY2SI
+        REsRqfJANFq+ePA63t3RlstNLuZMOch4KVLnyDcattVZMkIGitHxWK5c4bu1fPHg8RoZ6SrkGlucvYXU
+        BPm2CKlpcpFcIOeYGyOnLYx0F8qRjGv5whEOhwtvLTCvqJMZsZikJslUESYHQpgcDGUGOs/cOBkiUQui
+        4bGUK2LhcLvdW1vuz+IHd3UAxdnu25MHf7bxew7Z15EHxUHVGRIjHKDlgSyIVtvMH/xAeg4+S4M+Cgcs
+        zBwLYeN6ryxBP2/PIlIs7Y11XswcD2WWkZM5+Fy+fFw92mb+cDrMmZ8+pPCYhcMv5+PmgJHgh/N0U1OT
+        oUts0mbfMwVBI3F4Tz7UcQvfU2OaxrQumT9cTsfMB7vysKXBJ2d7lGf7bp36VzBXaRj20a0RH96nxuEw
+        Fx8gOzv7Phof4evuvJ4/drlvWL9TNKLV3Tpstr8ADlrCAUhk2WUAAAAASUVORK5CYII=
 </value>
   </data>
   <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>127, 17</value>
   </metadata>
+  <data name="BackButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsAAAA7AAWrWiQkAAAAYdEVYdFNvZnR3YXJlAHBhaW50Lm5ldCA0LjEuNWRHWFIA
+        AAU8SURBVEhLlVZrUFVVGL3cczg4IoiOV16pEHR5hJrglLySJsSJcVDLH4KZY5ZAaCAgDyEFI7WLjSga
+        NqjTQ9McC1HsggjyEkXxwUtAVCQ1obg6FkaN2er7NifKiRz6Ztacc/e31tqvb+9zNU8KHx8f85EjR86R
+        JOkjrVZr1EraiwKybOQ2znl6eioqffjh6upqoShKslaRe6SpOphHuMMiaTosswIE+F2hNs4xh7msUeVP
+        DhrVVEmW2uUAB9gYgjDnSDzW1+Vjf3sJijqrBfa3FyOzbhflEjCWOOaBDiDNFdaqNkOHpaVlsGSl9I2K
+        nYLgb6KwvWE/vmgtJBxWUYi9g78L8RmBOSEFUbCKmwLJyqKPPGapdo8H9y6T+biM6VhckoQtF/dg66U9
+        2NawG7mE7QK7xJN/czsjhzjMXVySDNbyAIeaicLLokv0wqtFkcg4s5mWJRtZZw3YcM6AjfXZApvqDYPY
+        cC4bHxCyzmYLLmtYq0vwEsv12J7wJlm/ZIcXDryChKo0JNWkIfXUGqSdTsXaM4wUrK6KR96lHcioS8E6
+        Are/R0irTRVc1iRUp5NHKKyDbMGeqr1GlhS5W5/rjYXGJVhxcgViK2Ooo3ewuiYayYTEihVo+qEZrXcb
+        sKY2SiD1VJTIra6ORjxxWRND2nDy0G/zhqRIPaKEuZatnx+LGV/5YVnpG4gqW0zE10mwCKuqIrCuOhG9
+        v/SC47KpnowXIoWQVBOOxOpwMl8kuKyJJO2y0iXCa/T0MWBvDR+Yp6OcqBICsLR0PpafmEfkMESXhWLn
+        hS14+OihMOe4ercVm8+kIZtgYJxOx6bTadhYm47kqrewvGwelh6fT16BcH57Ethbwyd02ofuCDs6g5Kz
+        aBTBWE7PE51G1XZ4cfhaPnUQLDzCjvrCe6Mb2FtjZmZ2MSjfEwuO+dD0/BF/cj46TO2qbPhReG0Host9
+        ycMPC4p8MPMTD7C36CBktxttjheN3pvKbi7uPOhQZcOPous5WFnxnPCIME5GyC63gQ54GiE5zjQ1D1p7
+        Dyo1D7oGpqHZ9K0qHV4U39hMledGHu7CK2SL88AS8Ub4x9nR9NypIvRUgq5Yf9YZm85PQuXt9/Hoj783
+        ube/kdpWouLWSpTfehcnbsaiuCsOxzpXIa9pNmldqPL0wssv1m5gk7mUnP1HIa7STTV3guHCRLoGnsLO
+        ZgcYb7yG/t9/FB3c+tmIL9ttsa/NFp+32mF3iz12NjkIruH8RKEVnVTqwZ6iTPmgyYrUHVPghEzVPLfR
+        EfnN9sLkwBVb6mQq7v1aj+4HRhzt1KHwug5fXx0vcszJp4H81UlmnTNiDjuBPHv4eyKOMh9r77lWdMdM
+        EsT8FkfsbbPHoQ5bMhyPki4dym86oMX0Jk7eHIcyArdx7lCHHXEdhGYradnDh7z+eVVwKDJddpF5OjHl
+        vW1OKLjmRCOfQIaOqP3eHue67XC+x1aA37mtnHLMYe4+0uSRNvJjHdjrXx8gvmJH2ch9mQXjcPCKI0q/
+        80L17WdR3+OBpl43tN3Vo+PeMwQ93Ul6NPa6ixxzjndNxsEOR7CWPdhLtX08+INjZSP1rf3UBqVdE2i0
+        vmg1zUTn/RdpgwNoD/xwp89PvF+/H0i5IME5TlzWWI2R+IMTrNoNHdw7TzE0fASOXBhNo3UhQ1+Y+mfj
+        p9/mCvA7t102uQhOaMQIsSz/OfIhgvZISVYUbffLoRI25MgoqZDQ0q5FM6G4QhZtnFMstN3qhv7/fxcU
+        MtcyHxg+lXz06ckY/NvCnAHqUKHR/Ak+w3XFs9EGkAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="FwdButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsAAAA7AAWrWiQkAAAAYdEVYdFNvZnR3YXJlAHBhaW50Lm5ldCA0LjEuNWRHWFIA
+        AAVASURBVEhLjVVrUJVVFIX7fX44PBQdrsAlFYJ4hZLglDxMmhQnxvFR/gCMHLN4hAYCinhNgUztYgOK
+        hg3q9KAwxwIUuyBvUFSeIhBeUNHUhAIdC7PGbLX3uTfLSR32zBoO56y19vn22edcsyeFt7e3YmlpuUCS
+        pI9UsqxXSap2AZVKz3O85u/vP8ZEH324ublZKIqSqlLkQclXDSXSExbrZsJqS7AAj8fQHK8xh7msMcmf
+        HLQrX0mWesfM1mCiLgQLjiQj48w+FBrKUNrfIFBoKEfmmXxaS4ItceRgDUhjYK3J5tFhZWU1T7KxGLFJ
+        nI7Qoljs7ijEZz0l+EKgGAX/GRtRIjhzv42FdcJ0SDbKCHnMNdk9HGLnRLBLn4mo8lRktx9AztkD2NWx
+        XyCXsFtgn/jL//P8TuIwN6p8HVgrk8f/voTrx2VRJ/vg1dIYpJ/eQSXIwpamLHzQnIWthO0tugfY1pIl
+        sLVZRxyd4LKGteoUH1EuslWM7hR8SONC7PHCwTAkN2zEuhNapJ3cAG1jGt47nYZNhM1n1iOdkHd2D9bW
+        J9HcejGvPZUmuKxJrteSxysY95ID2FOYcytKijTovssPEfrliK9ZhYS6eCTVv4O1DXFIPRFHBrHY0GhE
+        z80OdP7UhZTaVWJtLSGZuKxZRdpw8nDP9YOkyANkL3PtF4yfOQGzvg7EyorliKmKoiSvk2AZJVmGlIYI
+        2l0E1p8Mp0Th+H64BRxDvw1hc0MK1tRHCi5rYkm7suIN4TXu+YlgbzO+MC5vT6WumY0Vx5cgumoxUuvf
+        wrbGjdh+SgvdqY3QndYii7CDcOFmj0jAce/+Pexty0ZcVRglWIjoysVYUbGEvILxdKwz2NuMb6XfNg8s
+        PBpACeZRgrkovphvshhdVPbrEU3aGNKyx8KjszDjQ0+wt5m5uXn7nE+8sLTUnz4vEHHVASi5uMckHX30
+        DRuQVLOEPIKw9Jg/QvK9wd4iQeg+D0Tqp9EO/LC69jmUXsoxyUYfN+70UcsuEh4Reh+E7vcwJuDPCM12
+        oU/zojp6Ukd4oOzyDpNsdNE1/B09JzOoxdnDS3iF5rgYS8QHEZjgQKXxpI5wp1Z0RV7nfBzrX4OyK4mo
+        vJqA6mvvovbaatRdX42hu+dMtsD9v+7R3PvY3joVmU0upHWjznMXXkGJDsZD5lZyCbLGmjqjeWaTM3St
+        U+gZeAp7OzXY3+2Iz3sc8OV5e3xlsMe1X/XC/O6fP0N/+TXs7dIIrq5titByksQ6D7CnaFN+z2W6aPHF
+        zvSZLg/M80nIxgd77fHNhUkouaTG0X41Bu7ocev3FjL3FWvMye9yRO45J5Ekg5LEFzmDPI0XjYOvtf8i
+        G3pnpmInm3c7oeC8Bof7HMh0EsqvqFF11Q41hO7hN1F9VSPmeO1wnz1xHYWGN8YefuT14Kng4MdOpgcq
+        5mM11V9D5XBG0UVn2uVkMnNC44+OaB5wQOugvQCPea6G1pjD3ALScElj8tRgL7L997Hj4CfW2lYeySiy
+        w6E+Jxy/Mg0N159Fy6AXzg150hvkjr5bjGdwnsadQx5ijTkVP/jgUK8TWMse7GWyfTj4x8JmgjSy6VNb
+        SjCZdhuAnuEQXLo9mw43GDdGAukMAsW4//aLtDZHcCqIyxobW+nxPzj/BGfnTwyLHIsjbePpcXMlwwAM
+        352PX/5YJMBjnuu56So4YRFjRVkeu/NHBJ2RkqpYqAZeDpOwNUdGWa2MLoMK3YTyWuMcrymKasB0oA/X
+        fJQhcy/zheFbSWjn689jnuM15hipjwozs78BNGN1xcncUj8AAAAASUVORK5CYII=
+</value>
+  </data>
   <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
@@ -145,25 +210,53 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAU
-        BAAAAk1TRnQBSQFMAwEBAAFAAQABQAEAARABAAEQAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABQAMA
-        ARADAAEBAQABIAYAARAiAAFIAkkBhxgAAxcBIAE/AkABbtwAAQ8ByQH6Af8BWQFhAWQB0gMwAUsIAAMI
-        AQsDSgGMARcBuQHpAf4DMAFL3AABQgGDAZUB7wEPAckB+gH/AQ8ByQH6Af8BTwJTAaUDLQFFATIBlwGw
-        AfUBDwHJAfoB/wEPAckB+gH/AwYBCNwAAVECUgGnAQ8ByQH6Af8BDwHJAfoB/wEPAckB+gH/AQ8ByQH6
-        Af8BDwHJAfoB/wEPAckB+gH/AQ8ByQH6Af/gAAM3AVoBDwHJAfoB/wEPAckB+gH/AQ8ByQH6Af8BDwHJ
-        AfoB/wEPAckB+gH/AQ8ByQH6Af8BDwHJAfoB/+AAAx0BKgEPAckB+gH/AQ8ByQH6Af8BDwHJAfoB/wEP
-        AckB+gH/AQ8ByQH6Af8BDwHJAfoB/wEPAckB+gH/3AADCgENAUIBgwGVAe8BDwHJAfoB/wEPAckB+gH/
-        AQ8ByQH6Af8BDwHJAfoB/wEPAckB+gH/AQ8ByQH6Af8BDwHJAfoB/wM7AWXYAAFGAYQBkwHuAQ8ByQH6
-        Af8BDwHJAfoB/wEPAckB+gH/AQ8ByQH6Af8BDwHJAfoB/wEPAckB+gH/AQ8ByQH6Af8BDwHJAfoB/wEP
-        AckB+gH/AygBPdAAAVkCWwHEAQ8ByQH6Af8BDwHJAfoB/wEPAckB+gH/AQ8ByQH6Af8BDwHJAfoB/wEP
-        AckB+gH/AQ8ByQH6Af8BDwHJAfoB/wEPAckB+gH/AQ8ByQH6Af8BHwG1AdIB/AMjATPIAAMuAUgBWQFh
-        AWQB0gEzAaEBvgH3AQ8ByQH6Af8BDwHJAfoB/wEPAckB+gH/AQ8ByQH6Af8BDwHJAfoB/wEPAckB+gH/
-        AQ8ByQH6Af8BDwHJAfoB/wEPAckB+gH/AVEBdwF9AeYBVgJYAbzTAAEBAx8BLAM7AWUBKwGiAcAB+AEP
-        AckB+gH/AQ8ByQH6Af8BDwHJAfoB/wNMAZMDLwFKAw0BEeQAAz8BbQEPAckB+gH/AQ8ByQH6Af8BDwHJ
-        AfoB//AAAwEBAgEPAckB+gH/AQ8ByQH6Af8DTgGZ9AABUwJVAbABDwHJAfoB/wMGAQj0AAMHAQoBWQFj
-        AWkB1/wAAxABFdwAAUIBTQE+BwABPgMAASgDAAFAAwABEAMAAQEBAAEBBQABgBcAA/8BAAH3AecGAAHx
-        AYcGAAHwAQcGAAHwAQ8GAAHwAQ8GAAHwAQ8GAAHgAQcGAAHgAQMGAAHAAQEGAAGAAQEGAAHgAQcGAAH8
-        AT8GAAH8AT8GAAH+AT8GAAH+AX8GAAH/AX8GAAs=
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACk
+        CgAAAk1TRnQBSQFMAwEBAAEYAQABGAEAARgBAAEYAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABYAMA
+        ARgDAAEBAQABIAYAASQiAAMvBEoBtANCAXYDBQEHIAADBgEIA0EBdgNKAbQDLwFK/wBBAAExAjIB5QER
+        AXkBqgH/AQgBQwFaAf8DPwHSAyEBMBgAAyEBMQM/AdIBCAFEAVsB/wERAXkBqQH/AzIB4/8AQQACMQEy
+        AeUBGQGsAekB/wEcAb8B+gH/ARIBiQGtAf8BEgEdAR8B+ANDAXgDAgEDCAADAgEDA0MBeQESAR0BIAH4
+        ARIBigGtAf8BHAHAAfoB/wEZAawB5gH/AzIB4/8AQQADTAGmAREBewGnAf8BHAHCAfoB/wEcAcoB+gH/
+        ARkBvwHlAf8BBwE/AUsB/wNIAcUDFwEgAxgBIQNIAcUBBwFAAUsB/wEZAcAB5QH/ARwBywH6Af8BHAHE
+        AfoB/wESAXwBpwH/A0wBpv8AQQADOAFeAQkBSAFfAf8BHAHEAfoB/wEcAcwB+gH/ARwB0wH6Af8BHAHa
+        AfoB/wERAYoBmwH/ARgBIQEiAfMBGAEhASQB8wERAYwBmwH/ARwB2wH6Af8BHAHUAfoB/wEcAc0B+gH/
+        ARwBxgH6Af8BCQFJAV8B/wM4AV7/AEEAAxMBGgEEARcBHgH+ARwBxAH6Af8BHAHMAfoB/wEcAdMB+gH/
+        ARwB2wH7Af8BHQHiAfsB/wEZAcoB2wH/ARkBywHbAf8BHQHjAfsB/wEcAdwB+wH/ARwB1QH6Af8BHAHO
+        AfoB/wEcAcYB+gH/AQQBFwEeAf4DEgEY/wBFAANBAdEBFwGkAdEB/wEcAcsB+gH/ARwB0gH6Af8BHAHZ
+        AfsB/wEdAd8B+wH/AR0B4wH7Af8BHQHkAfsB/wEdAeAB+wH/ARwB2gH7Af8BHAHTAfoB/wEcAcwB+gH/
+        ARcBpQHRAf8DQQHQ/wBJAANHAYgBDgFqAYwB/wEeAckB+gH/ASAB0AH6Af8BIAHVAfoB/wEgAdoB+wH/
+        ASAB3QH7Af8BIAHdAfsB/wEgAdoB+wH/ASAB1gH6Af8BIAHRAfoB/wEeAcoB+gH/AQ4BawGMAf8DRwGI
+        /wBJAAMuAUcBBgEzAUQB/wEgAcUB+gH/ASoBzQH6Af8BKgHSAfoB/wEpAdUB+gH/ASoB1wH7Af8BKQHX
+        AfsB/wEqAdYB+wH/ASoB0wH6Af8BKgHOAfoB/wEgAcYB+gH/AQYBNAFEAf8DLgFH/wBFAAMYASIDQQHQ
+        AQsBUwFxAf8BIgHBAfoB/wE2AcwB+gH/ATYBzwH6Af8BNgHSAfsB/wE2AdMB+wH/ATYB0wH7Af8BNgHS
+        AfsB/wE2AdAB+gH/ATYBzAH6Af8BIgHCAfoB/wELAVMBcAH/A0EB0AMYASL/AD0AAy0BRgEmASoBKwHs
+        ARABbQGfAf8BJgG4AfkB/wFBAcUB+QH/AUQBygH6Af8BRAHNAfoB/wFFAc8B+wH/AUUB0AH7Af8BRQHQ
+        AfsB/wFFAdAB+wH/AUUBzgH7Af8BRAHLAfoB/wFBAcYB+QH/ASYBuQH5Af8BEAFuAZ8B/wEmASoBKwHs
+        Ay0BRv8ANAABAQNBAXIBDAEcASEB+gEUAYMBxgH/ATQBswH5Af8BUwHCAfoB/wFUAccB+gH/AVQBygH6
+        Af8BVAHNAfoB/wFUAc8B+gH/AVQB0AH7Af8BVAHQAfsB/wFUAdAB+wH/AVQBzgH6Af8BVAHLAfoB/wFU
+        AcgB+gH/AVMBwwH6Af8BNAG0AfkB/wEUAYQBxgH/AQwBHAEhAfoDQQFy/wApAAMHAQkDTAGkAQQBIQE5
+        Af8BGgGOAeIB/wFKAbQB+QH/AWUBwgH6Af8BZQHGAfoB/wFmAckB+gH/AWYBywH6Af8BZgHNAfoB/wFm
+        Ac4B+wH/AWYBzwH7Af8BZgHQAfsB/wFmAdAB+wH/AWYBzQH6Af8BZgHMAfoB/wFmAcoB+gH/AWYBxgH6
+        Af8BZgHDAfoB/wFKAbUB+QH/ARoBjwHiAf8BBAEhATkB/wNMAaQDBgEI/wAhAANLAZoBCAE2AV0B/wEj
+        AZQB8gH/AWQBuQH5Af8BeAHEAfoB/wF4AcgB+gH/AXgBygH7Af8BeQHNAfsB/wF5Ac4B+wH/AXgB0AH7
+        Af8BeQHQAfsB/wF5AdAB+wH/AXkB0AH7Af8BeQHQAfsB/wF5AdAB+wH/AXkBzwH7Af8BeQHNAfsB/wF5
+        AcsB+wH/AXgByAH7Af8BeAHFAfoB/wFkAbkB+QH/ASMBlAHyAf8BCAE1AVwB/wNLAZr/ACEAAzIB4wEX
+        AYIB3AH/ASQBlwH3Af8BLwGcAfgB/wEzAaAB+AH/ATcBpQH4Af8BOwGrAfkB/wE/Aa8B+QH/AUQBswH5
+        Af8BagHFAfoB/wGQAdQB+wH/AZAB1AH7Af8BkAHUAfsB/wGRAdQB+wH/AWoBxgH6Af8BRAG0AfkB/wFA
+        AbAB+QH/ATsBqwH5Af8BNwGmAfgB/wEzAaAB+AH/AS8BnAH4Af8BJAGXAfcB/wEWAYAB2QH/AzIB4/8A
+        IQADPgFsARQBFgEYAfYBAQEQARwB/wECARUBJQH/AQMBGgEuAf8BBAEhATgB/wEFAScBQAH/AQYBLgFK
+        Af8BCAE4AVoB/wEoAaMB9gH/AaQB2QH8Af8BpQHZAfwB/wGkAdkB/AH/AaMB2QH8Af8BJwGkAfYB/wEI
+        ATgBWgH/AQYBLgFKAf8BBQEnAUAB/wEEASEBOAH/AQMBGgEuAf8BAgEVASUB/wEBAQ8BHAH/ARQBFgEY
+        AfYDPQFr/wAlAAMDAQQDEgEYAxcBIAMYASEDJgE4AyYBOAMsAUQDRgHGARIBbQG2Af8BkQHNAfsB/wG7
+        AeEB/AH/AbsB4AH8Af8BkQHOAfsB/wESAW0BtgH/A0YBxgMsAUQDJgE4AyYBOAMXASADFwEgAxIBGAMD
+        AQT/AEUAAzkBYAEIATUBXAH/AV8BtAH5Af8B0wHqAf0B/wHTAeoB/QH/AV8BtQH5Af8BCAE1AVwB/wM5
+        AWD/AGEAAwwBEAETARgBHAH4ASYBlAHwAf8B5QHyAf4B/wHkAfIB/gH/ASQBkwHvAf8BEgEXARsB+AMM
+        ARD/AGUAA00BqwERAV8BpgH/AbUB2wH8Af8BtQHbAfwB/wERAV8BpgH/A00Bq/8AaQADMQFPAQYBLAFM
+        Af8BYgG1AfoB/wFiAbUB+gH/AQYBLAFMAf8DMQFP/wBpAAMGAQgBHgEhASIB8AEfAYwB6AH/AR8BiwHn
+        Af8BIQEkASUB7gMFAQf/AG0AA0oBkgEJATkBYgH/AQkBOQFiAf8DSgGS/wBxAAMKAQ4DSgGZA0oBmQMK
+        AQ3/AEkAAUIBTQE+BwABPgMAASgDAAFgAwABGAMAAQEBAAEBBQABIAEBFgAD/wEAAfAB/wEPCQAB8AF+
+        AQ8JAAHwARgBDwkAAfABAAEPCQAB8AEAAQ8JAAHwAQABDwkAAfgBAAEfCQAB+AEAAR8JAAH4AQABHwkA
+        AfABAAEPCQAB4AEAAQcJAAGAAQABAzkAAYABAAEBCQAB/wEAAf8JAAH/AQAB/wkAAf8BgQH/CQAB/wGB
+        Af8JAAH/AYEB/wkAAf8BwwH/CQAB/wHDAf8JAAs=
 </value>
   </data>
   <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
