--- a/VoxPopuliClient/src/forms/MacMain.resx
+++ b/VoxPopuliClient/src/forms/MacMain.resx
@@ -118,62 +118,48 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="CommentButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="CompactButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsIAAA7CARUoSoAAAAAYdEVYdFNvZnR3YXJlAHBhaW50Lm5ldCA0LjEuNWRHWFIA
-        AAUgSURBVEhLrVVrbBRlFL3fzGzZqa3Qj219dYegxQDuoAkk4g/YQkQehsQYS0VN1R+CiaYkBARNSNGI
-        JIUEAihasVhAoQIFhKpVoYIUKK19QFsoBVreLRQEpFiKcDyzuwYSxYSkN7nZme9xzr3n3jsr/2epqana
-        5/NNME1zoWEYxfRqLlfzfTu9wLKsbK31wOjpu7DExMR+cXFxK5Xds1MGjIJ6eiruzVoCZ2oh+k5bi+TJ
-        +TDH50AGZ0J69wXJKhISEl7gVRVFuLMpAucYCYHrauQU9H9/GyYV1mPprhMorGlFYW0bCvfR+bvitzN4
-        97vDGLF4L3pMXARxBoMZlTKj1BjWv8xHCYqk3zAEpm3BpLUNyN1+DLk7jiP311s+77bniHN/VskRPJG7
-        C2rUNBhxdhuxHotC3jLFNFfLoGfx0Ac78ObGRmQXH0b29/QfjiC75Cim/Bj17J+ao89c89Yj+8wke0sT
-        hn9SCZkwH8rnb0tKSgrGsEX8fn+WBB/HPe9txXNf1SFj7QFkrD+IDBJlbDqEjM1NUSdpBsEivwSMrHln
-        inh2He8UNuDR+bshY97x5NoagxdLGWazTPoSAxdXILxiH8Jf1yHMw+m8lM7LYZJE/NvbnO/pGxoRZiDp
-        3zQgvLoe4ZX7MSy/Br5ZpZBU1yv+SImPjx8tjzwJI2c7Qp9VwV1eC5cH3TX1cJmJSwKXUboEdAnsbo79
-        eu8buMcgXAbjMnO3YB/cZTXQrIc8P9vLYrWwsDky+m345pYhSAInvxbOqv1wSODwskNwh6AOJXGKY+49
-        U57gJu4xgCAzcJi1Q4Lg59XotaAcMqMYyjCahWksl5fmwJi/BzqvCpoZaEajeUlTAk0wTd01i6lZ3Iiz
-        azQbQJNMk0QzEE2JkiivZgb2ogrIRzth9LDhEeTJKx9CFrKfyW7zkL2mAXZRI2xGaRPY/rkZ/m0t8P9y
-        LOql9K0tsElmk9zeeAg25bRX1cHPGhhL2E3zdrFl/V3CwZopYydDPq6E+oKbjN5YdxAGwQ22oUFgi71u
-        cdisPSdher6bvvM4TJKZbFuTJCazNRmYQZnk0yrI7M1ekQ+IbdtDpM9ACOVR3FSURrGAipGr0hYYZSeg
-        Kk7DqjoDq7YVilMsnGrhJAvJFIdRkURRSsXAFAMUBiqZM8Dv2OJInyql9sj0PCgWSlEaxYgikTNqD8jc
-        fxa+g+0wDp2H0FVjO1T9OUg1icpPwfJImG0kMHaULKNEyak3qM6ACAE/VMPV/c5Ntbwcii3opW15ElQS
-        vO4s4prOI77lIqwTl2GepB+/BPPo7zAPnINJEh8l8zFbxQFUnAsZ9yoIviwC/o+xZ6fLgMGUqBpxPKwp
-        iya4broATUDdegX6/FUkXfgT+lwH9KnL0CTRJNFVrUj0pKSs8voMKGXsJaQdRb7NSDJTnLSbKq8YPStP
-        oz/lCBE81HYFoYudCHV0wb16HaHL1xBq70CIJCGSPMgvrFFCacZmgnNVRqheUcT/ME72GMOymmV8Jsz1
-        pXiA0gw624Fhf1zDM9f+wuiuGxhBoiHMpC8J4ssPQ6bOhgqkdLGoc9PS0nrEoO5sQ4cOZXPZb7HNatTD
-        /SAvvwaZkwvJL4AUrIKsKYKcuQIp2Q2VnNLJcwuTk5PTYtfvzvilDTKyFynfLAItZcftkIlZBC+DmXJf
-        J//9xsWOdo+RZIFkvQGjd+BqIBDoXnDPSLCXg3OJj09FV7rRvAKyS9opV/eDe5aSkuLeHbjI32G1fJF+
-        JVfnAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsAAAA7AAWrWiQkAAAAYdEVYdFNvZnR3YXJlAHBhaW50Lm5ldCA0LjEuNWRHWFIA
+        AAJwSURBVEhLtZZLbxJRGIa5ljJgvCKXjcb+g65c23/AVm4mRFJ0hVp1o0kTbaKJAU2MjUa76MImLhuo
+        Nk1by8W2yrU2xaZt4oVBWgnQlrIgeT1nCoTAZJiS9EueHOYL53tgZt7JSJRKZb9cLo9KpVL2qMhkspRK
+        oxmQCBUdbjab4fV6CT54fU1wvUN8LdCew+GAQqHI1EbxF/0lVqsVdrtdNBaLBR6PBzabDWq1+qA2ir/I
+        32QHB91wu8XjcrngdDq5zwzDCAvIKWInZ+bhn13gJTAX5JiaD+Hj5zA+LYQxHfyCmdAiZiPLOHP2XAeB
+        QsHm/uWxky90hV6vFxaQi8TulcsoVypdYTQaK2SM9HAaT3USFHb3sZXJYW3rNxLpTSyl0gjFvmNuOYnp
+        SBQ60wXIe7XVNhTKrEqluiIoKOzt45rvA4be+UVzZyzAcfn6Q9CcCAo2cnmcuj+G003Uj5v7zT2X9RZG
+        rt7AyaE3kEhlrKBgNbONXp+/ned+qLk1wKGu8yIA0+MJXBweB+OdBMmAsOBnJovg1zgh1gLtxRH6VieB
+        cDSBSDSJSCyJxXgKIfI9mjFBweavP8gXS13xd3sHMpIxLgf5YhGF0m4bibV1XrEYCqUSaIi5JCfT61j5
+        sYEUga51pkhy+TaLoSGgt9KDkad4NT5BeI9RslLo8ZOXr3k3i6EhIGEYINcho9FqD7TaE81ULvX18W4W
+        Q0MgUFKTyVTl2ywGMQLJsQvIg+x4BQaDocp3j4shS3NAgyZUOt35amw1jW5YSqx0FvT09GTvDT/Cs9G3
+        R+bm7bv0FEVro/iLPs9pTlpfV8RAhzMM0/8fPSZuk000IYYAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="GetTrendsButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="SettingsButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsIAAA7CARUoSoAAAAAYdEVYdFNvZnR3YXJlAHBhaW50Lm5ldCA0LjEuNWRHWFIA
-        AAVHSURBVEhLnVR7UFRVHL7s7l3u3rvLY0mBQFYdAnUFwdURUBqK9ZE0pYy4TpgkPhgbZ6SmEbRtbNZC
-        Mdd8JGqa5fguBcUHKiqQjrgwoQ5KmqAYZmM5jf7TTIr363fOvTZmDVq/mW/Oub/zfd85557zO8KTYbFY
-        YkUxuJC6xaIoTrPHxMRqI/8Mu91OXHEadRl3OtNqI/8SaWlpliCjcZWk2B44EgcjOS0TcQlOWKy2bjE4
-        2O8SBFGnCi6Xi1LBfoti645LGMS5TMO0RqNxJfPSqX9FkMkkHrBH90FqphtZObl4iZA1Phcpo9wIj4yB
-        yWTepXMFk9m8m+VSRmZz3iNuKnEjomJBu6nWqVpIkpQvKSGI7puIqH6JiCawduaUMUhOHcL7tDqYzebX
-        GSTZiqi+CX/jFkxywzUslfct1lBIkpKv29OKTKaTSkgYrGER6BUZhdfGjsLBTV6orV/g4jclSE9NgGwL
-        hcFgOMjA+owb0TsSOe4MVK1fQNzNuFK1EJnDB4B5MU9uTgdT5IyPUUs9ybhR9Q7uX9gM9dohoLOW2oNc
-        qJ7yonRyEpIT+oC4mDfBic7KYvxxftNj3ENQL34J9fQHWDxtKAa/EKvKsjxbUCxie9fWPJwsfwVqYCnU
-        K18DN04AP9ZRexzq5V1Qz5ahZrEbt3d6cGv7ZBzyjeY59fLux7gn+LcaWIK68nH4aXseLGZTuxBsFgNt
-        FWMp4dEmIEPcqAW66rWVfb+TmzHjlpWjCW7qM+4SPsYWga4GfTHEJY+fd0zGpbXjYBbFgEDbcMmS6XJ5
-        gRNq42Kol7ZA7TgAXD8Ctb2atv0V1LpS+DyJCLOHc/imDIBaX6qNdRCHcVnLvs/4wLyYp0je/BwEwSEp
-        kulOS0Wu9h/b95GA/v8Pe3CrZhEWzMrBmAke5E0vwqS3ijB6ogcLZ+fg9tFFxNmrndXVKn5eLRUTQV6/
-        CkJ8sG4uCFQc5UrGROStrca9s+vRHViOh9+tQefOOUgflQHn8EwMHvEikgiPWpZLz8xA5+63ibsa3U1+
-        3AusQ95n1VAycmE0iuXcXJbDhoj9h6LXihZEfhJAY8cvmLq1GbFlVXC40hAZF6/BoaF/4kBsXJSPAU4n
-        zzuGpRO3EvnbmnGGtL2XBbiX2G+oqihhyazISsVXSyB5T3FYvQ28lT3FsIU/R4jgcPR14L2iSXT2a6Be
-        2IBzO95FirM/5yhTiknzLWzeeq61ELgnebNDLhFE+bpgCeEIkkK6BMlGlatg2ew0VC+fitYqH7qv7KHD
-        rNHA/jtN8qDhfWyZnwXJakUQaQxyaFcQ82BeZvk6934yaNY3CnNSUDZzJB4emQW1qZyu4w66ske1+87A
-        bk3bNn4luw/PwEczRoJpmFa36TE+3LsgHbUfu6HWzoHa7Ndqg2qC1wavj2NafTQvh3qsiLjZYBqm1Sx6
-        CEVRsrOTwtGxcTzUIzNpB59oq712mFZ/koP1ea5pGXEKcfXz8chOsoNpdZueg57bN40GQ0dd2cu8YtFK
-        tXG1UjNmoD7YG8WehbIsMC7T6PJnC6vVOsgZZ3twdz/tghUfO1hWrQxUgGyCu/sK4exju0/cgbrs2YMO
-        bIUlOQvz/Svx+3F6js+vA6i6GdRzFZQrobFPIROHXmS/Lnu2IPMCKXUsnl/biiGrTuP2nd9w81I9fOv9
-        8G3w42ZbA8+xsWjiMK4kyQW6/OlhEKW2UO9RhC9tRviSJsytbMWI1Y3aN2HEmkbM3dvKx9h3qPcYDGbp
-        oi5/akhBveMhztv/n2CIjGfX1KhZ9BxmQs3/hIHwWAjCn1VXtU2w7EhZAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsAAAA7AAWrWiQkAAAAYdEVYdFNvZnR3YXJlAHBhaW50Lm5ldCA0LjEuNWRHWFIA
+        AASaSURBVEhLlVZdTJtVGIYA/fn6QwKWO53ZhYkao4vMC5JhookSY7ySJSYmcqNBN+bCwtjGCIIDJkKY
+        sSuUH1N+2gIF2lKo/BfogMEoFJhQNpiDaEy8oEmbjMvH855+/WhFgnuTh57vnPd9nu97z/ueQ8JJJpfL
+        TycnJzclJiZ62eMKgcY0R2vc6XktPT1dI5PJXhUfc85lZ2PaO4vNRzscND6X/S5ojRzIl2JofKIpFIos
+        FrAnqFRB9piZlJT08ae55/HHX3/HgeZojXzIl8XsajSaLE5ynKWlpeXqMjIOeu1O9Dlc0Gi1IYZwaVk5
+        nuz9GYfSsgpaD2u1qaE+pwu2fid0uoxnOp0uV6SLN3pz5nAwMjGFrZ1dDvfoJJb8D7G8voWZBT9Gpu/D
+        NX4PgxOz8Mz5MO9b5T4B5kug2BcYx5EvEXO+127pwdrmtgT/b48w51uHZ36ZkS9iYOweet0eWByjMNmG
+        0GIdwK+e+Yh/YBvrgR20W22gdLEvUYv0kU1SCkLQZO6Gby0A33oA/o3HWGLjWAHXvwSMZgd+Ntn4M/kS
+        iEMQhH3iFOkly1RrNKGuPhdWHm7xt6GA2RgB9+Q8nKNeWJ1jXKBJFKhrsqJncAJWFqtWa0LEFaFkJtZy
+        DlUEWwyPTM2xfD6VBOgLppiA3T2OkvJbuFleif6hMf4lJKAXBWoaO+EY8UClUofF6srh3NQwb719Fu9/
+        +BG+LijEg9UNvsFRgemFFZRV1oClcJ8FGhgaaPwdm6PURAWq77bD1OtG/qVCznWGcRJ3AnWloaUTQxNz
+        HOtssw4FNmHpG4JSKeyzN3qJvli0U2wu2GFzQd/WKwncae3mFTY4OQdDayd497M/q209A7APT3MEtp9K
+        AvMsPZevllBDGURiyWjuclEJ3+iowG1DO/qHpziPqctBnb7CBVrM/eh2jXNsPv5dEphdWsPFwmsk0BCh
+        PTSao7XGTrskQOgSeZo6eiUBb/WdRnT0D3MssxKNCjxY3URDWw8USiWl6BRnjtjLbC6o/8Ual6IfG80S
+        D3HyFNFGvPbGm8jKfg+f5X2FMe8itp4cbrKbNdKFKzegUCiDlBZ6cxrTXLPFyTb5UOAntgfEQVzEyTc5
+        tkwFQRU2mHqwwdIUFaA+cIzOoK6hDXn533LUGkxo7XKJZRoRuH23A3XGDiqI+DKNsUyloAqVVNazZpo5
+        FGD7QI02PLXAa5+azCx2cqwAgWJZCcc3Ghm1tUyuCBZcq0Ct0cKcLfyMiX5BpJMXjhwVsY1GcYSC4goQ
+        V9xRQYddckrKbv6VUlTr21HFQDk120fgXfTDc/+/BYysgoiU/Kv0bfyXOFIYV9xhR0ZHrFqb+uzSjSqU
+        17dyFFy/hbJaI893t2sCtsFJnp5mdorWN3fh5g8G7hP1p1jiOPbioQtHrUk9+OLCVeRdLKbKCckVyvAH
+        n5xHSY2RoVECzdGaQimEyJdi1Brt8RdO1OjioXTJZHKqfX5lvn7mHRRV6uNAc2K1ZDLfIMWceGVGjfIX
+        s0k5L55+BZ9/U4wvi77noDHN0Ro5kO+RnP9fo1qmhuFd+dz/tiQk/ANuUvW0LzRzhgAAAABJRU5ErkJg
+        gg==
 </value>
   </data>
 </root>
